fixed formatting issue on smaller screens

--- a/site/src/app/components/partners/Partners.scss
+++ b/site/src/app/components/partners/Partners.scss
@@ -13,10 +13,10 @@
 	width: 100%;
 	aspect-ratio: 3/1;
 
-	@media screen and (max-width: --med-width) {
+	@media screen and (max-width: 750px) {
 		aspect-ratio: 2/1;
 	}
-	@media screen and (max-width: --small-width) {
+	@media screen and (max-width: 450px) {
 		aspect-ratio: 3/2;
 	}
 }
@@ -49,11 +49,11 @@
 	border-radius: 50%;
 	opacity: 0;
 	font-size: 0vw;
-	transition: all 2s ease;
+	transition: all 1s ease;
 
-	@media screen and (max-width: --med-width) {
+	@media screen and (max-width: 750px) {
 		visibility: hidden;
-		transition: 0s;
+		transition: 0.5s;
 	}
 }
 
@@ -79,11 +79,11 @@
 	border-radius: 50%;
 	opacity: 0;
 
-	@media screen and (max-width: --med-width) {
+	@media screen and (max-width: 750px) {
 		width: 65%;
 		font-size: 2.5vw;
 	}
-	@media screen and (max-width: --small-width) {
+	@media screen and (max-width: 450px) {
 		font-size: 3.5vw;
 	}
 }
@@ -114,12 +114,12 @@
 		height: 80%;
 	}
 
-	@media screen and (max-width: --med-width) {
+	@media screen and (max-width: 750px) {
 		visibility: visible;
 		position: absolute;
 		width: 55%;
 	}
-	@media screen and (max-width: --small-width) {
+	@media screen and (max-width: 450px) {
 		width: 75%;
 	}
 }
